# charon

./: .flake8  .gitignore  .packit.yaml  .pylintrc  Dockerfile  MANIFEST.in  Makefile  README.md  charon.spec  configparser_test.py  hermes.spec  maven_meta_test.py  mrrc.spec  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  scan_maven.py  setup.py  sonar-project.properties  test-coverage.sh  test.sh  tox.ini  zip_test.py
.github/workflows/: codeql.yml  linters.yaml  pr-build.yml  unittests.yaml
.tekton/: charon-image-pull-request.yaml  charon-image-push.yaml  charon-pull-request.yaml  charon-push.yaml
charon/: __init__.py  cache.py  config.py  constants.py  storage.py  types.py
charon/cmd/: __init__.py  cmd_cache.py  cmd_checksum.py  cmd_delete.py  cmd_index.py  cmd_merge.py  cmd_sign.py  cmd_upload.py  command.py  internal.py
charon/pkgs/: checksum_http.py  indexing.py  maven.py  npm.py  oras_client.py  pkg_utils.py  radas_sign.py  signature.py  (+1 more)
config/: README  aws-credentials  charon.conf  charon.yaml  charon.yaml.sample  charon.yml  hermes.conf  mrrc-uploader.conf
hermes/: __init__.py  config.py  constants.py  storage.py
image/: Containerfile
mrrc/: __init__.py  archive.py  command.py  config.py  constants.py  maven.py  metadata_mvn.py  metadata_npm.py  metadata_package_npm.py  metadata_version_npm.py  mrrc_logger.py  npm.py  s3client.py  storage.py  util.py
rel-eng/: tito.props  version.template
template/: README  archetype-catalog.xml.j2  index.html.j2  maven-metadata.xml.j2  package.json.j2
tests/: __init__.py  base.py  commons.py  constants.py  requirements.txt  test_archive.py  test_cf_maven_ops.py  test_cf_npm_ops.py  test_cf_reindex.py  test_cfclient.py  test_checksum_refresh.py  test_config.py  test_config_radas.py  test_extract_tarballs.py  test_indexing.py  test_manifest_del.py  test_manifest_upload.py  test_maven_del.py  test_maven_del_multi_tgts.py  test_maven_index.py  test_maven_index_multi_tgts.py  test_maven_meta.py  test_maven_sign.py  test_maven_upload.py  test_maven_upload_multi_tgts.py  test_npm_del.py  test_npm_del_multi_tgts.py  test_npm_dist_gen.py  test_npm_index.py  test_npm_index_multi_tgts.py  test_npm_meta.py  test_npm_meta_s3.py  test_npm_upload.py  test_npm_upload_diff_pkgs.py  test_npm_upload_multi_tgts.py  test_pkgs_dryrun.py  test_radas_send_handler.py  test_radas_sign_generation.py  test_radas_sign_handler.py  test_radas_sign_receiver.py  (+4 more)
tests-input/: commons-lang3.zip.sha1  kogito-tooling-workspace-0.9.0-3.tgz
(+34 files in other folders)
